--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -42,7 +42,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 11: \today} \normalsize
+\hfill \small \emph{version 12: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -87,9 +87,9 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{13}{4/10}{4/14}    & 9.1, 9.2 \par \hdue{A7} & 9.3, 9.4 & 9.5 \\ \hline
 
-\wkday{14}{4/17}{4/21}    & 9.6 & 9.7, 10.1, 10.2 \par \hdue{A8} & 10.3, 10.4 \\ \hline
+\wkday{14}{4/17}{4/21}    & 9.6 & 9.7 \par \hdue{A8} & 10.1 \\ \hline
 
-\wkday{15}{4/24}{4/28}    & 10.5 & 10.7 \par \hdue{A9} & \\ \hline
+\wkday{15}{4/24}{4/28}    & 10.2, 10.3, 10.4 & 10.5, 10.7 \par \hdue{A9} & show-and-tell \\ \hline
 
 \wkday{16}{5/1}{5/5} & \vac{no class} \par \proj{Project: complete due} & \ee{Final Exam} \par THURSDAY 5/4 \par 10:15--12:15 &   \\ \hline
 
