--- a/assets/exams/S23/finalrubric.tex
+++ b/assets/exams/S23/finalrubric.tex
@@ -66,13 +66,13 @@ keepaspectratio=true]{#1.eps}}
 
 \vspace{0.25in}
 
-\noindent (\emph{10 pts}) \textbf{\underline{Comp}leteness, and staying on-topic}  
+\noindent (\emph{10 pts}) \textbf{\underline{Completeness}, and staying on-topic}  
 \vspace{0.3in}
 
-\noindent (\emph{10 pts}) \textbf{\underline{Corr}ectness, with reasonable notation}
+\noindent (\emph{10 pts}) \textbf{\underline{Correctness{\footnotesize\strut}}, with reasonable notation}
 \vspace{0.3in}
 
-\noindent (\emph{5 pts}) \textbf{\underline{Read}ability and clarity}
+\noindent (\emph{5 pts}) \textbf{\underline{Readability} and clarity}
 \vspace{0.35in}
 
 
@@ -80,5 +80,5 @@ keepaspectratio=true]{#1.eps}}
 \vfill
 
 \hfill
-Final Score: \underline{\phantom{dlkfjadklja f sdakfj}} / 50
+Final Score: \underline{\phantom{dlkfj akfj}} + \underline{\phantom{dlkfj akfj}} $=$ \underline{\phantom{dlkfjadklja f sdakfj}} out of 50
 \end{document}
