post an example case summary

--- a/assets/exams/S23/finalcases.tex
+++ b/assets/exams/S23/finalcases.tex
@@ -93,7 +93,7 @@ Each summary should be at most a page.  Equations are important, plus a few (at 
 Except for special cases, a Summary should \textbf{state the problem} (DE and initial/boundary conditions), comment on or supply an \textbf{exact solution}, state one or two \textbf{FD discretization}(s), summarize the \textbf{truncation error}, and summarize \textbf{stability}.  Then it should consider and fill-in any relevant additional ideas for the problem and the chosen method; see ``Consider:'' below for the specific problems.  The goal is \emph{not} to prove anything, but to accurately and precisely summarize what we know---or we easily could know---about the problem and the available method(s), especially in advance of writing a code.
 
 \smallskip
-For each Summary your goal is to write something like a neat 10 or 15 minute white-board presentation of how you would solve the problem numerically, as you might give to a hypothetical fellow graduate student who has not seen that particular problem but who has taken similar-level classes.  Please \emph{do not} assume the reader/audience is an expert on the topic; remember to say the basic things!
+For each Summary your goal is to write something like a neat 10 or 15 minute white-board presentation of how you would solve the problem numerically, as you might give to a hypothetical fellow graduate student who has not seen that particular problem but who has taken similar-level classes.  Give an executive summary, and remember to point out the basic things!
 
 \medskip
 
