possibly final schedule

--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -42,7 +42,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 13: \today} \normalsize
+\hfill \small \emph{version 14: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -89,7 +89,7 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{14}{4/17}{4/21}    & 9.6 & 9.7 \par \hdue{A8} & 10.1 \\ \hline
 
-\wkday{15}{4/24}{4/28}    & 10.2, 10.3, 10.4 & 10.5, 10.7 \par \hdue{A9} & 11.1, 11.2, 11.5 \\ \hline
+\wkday{15}{4/24}{4/28}    & 10.2 & 10.3, 10.4 \par \hdue{A9} & 10.$\{$5,6,7,10$\}$ \\ \hline
 
 \wkday{16}{5/1}{5/5}      & show-and-tell \par \proj{Project: complete due} & \ee{Final Exam} \par THURSDAY 5/4 \par 10:15--12:15 &   \\ \hline
 
