--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 1: \today} \normalsize
+\hfill \small \emph{version 2: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -66,7 +66,7 @@
 
 \wkday{2}{1/20}{1/24}   & \vac{AK Civil Rights Day} & \ch{2} \par \hdue{A1} & \dl{drops} \\ \hline
 
-\wkday{3}{1/27}{1/31}   &  &  &  \\ \hline
+\wkday{3}{1/27}{1/31}   &  &  & \hdue{A2} \\ \hline
 
 \wkday{4}{2/3}{2/7}     &  &  & slides? \\ \hline
 
