daily; declutter schedule

--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -62,13 +62,13 @@
 \begin{tabularx}{1.03\textwidth}{l|>{\raggedright\arraybackslash}X|X|X|}
 \textbf{Week} \quad Dates & M & W & F \\ \hline
 
-\wkday{1}{1/13}{1/17}   & example & \ch{1} & \\ \hline
+\wkday{1}{1/13}{1/17}   &  & \ch{1} & \\ \hline
 
 \wkday{2}{1/20}{1/24}   & \vac{AK Civil Rights Day} & \ch{2} \par \hdue{A1} & \dl{drops} \\ \hline
 
 \wkday{3}{1/27}{1/31}   &  &  & \hdue{A2} \\ \hline
 
-\wkday{4}{2/3}{2/7}     &  &  & slides? \\ \hline
+\wkday{4}{2/3}{2/7}     &  &  &  \\ \hline
 
 \wkday{5}{2/10}{2/14}   &  &  &  \\ \hline
 
