--- a/assets/general/S25/schedule.tex
+++ b/assets/general/S25/schedule.tex
@@ -43,7 +43,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 2: \today} \normalsize
+\hfill \small \emph{version 3: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -70,7 +70,7 @@
 
 \wkday{4}{2/3}{2/7}     &  &  &  \\ \hline
 
-\wkday{5}{2/10}{2/14}   &  &  &  \\ \hline
+\wkday{5}{2/10}{2/14}   & \hdue{A3} &  &  \\ \hline
 
 \wkday{6}{2/17}{2/21}   & \ch{3} &  &  \\ \hline
 
